--- a/Introducción/hola_mundo.html
+++ b/Introducción/hola_mundo.html
@@ -10,9 +10,9 @@
             alert("Evento funcion");
         }
     </script>
-    <script>
+    <!-- <script>
         alert("interna sin funcion");
-    </script>
+    </script> -->
 
 </head>
 <body>
@@ -25,6 +25,8 @@
 
 
     <button onclick="externo()"> Evento externo </button>
+
+    <button onclick="console.clear()"> Limpiar consola</button>
     
 </body>
 </html>
