--- a/Ejercicios_Funciones/Ejercicio8.html
+++ b/Ejercicios_Funciones/Ejercicio8.html
@@ -7,8 +7,13 @@
     <script src="Ejercicio8.js"></script>
 </head>
 <body>
+    Introduce la temperatura que quieras convertir y pusla el boton correspondiente<br>
+    <input type="number" id="temp"><br>
+
+
     <button onclick="CaF()">Celcius a Fahrenheit</button>
     <button onclick="FaC()">Fahrenheit a Celcius</button>
 
+    <p id="result"></p>
 </body>
 </html>
