--- a/Ejercicios_Funciones/Ejercicio9.html
+++ b/Ejercicios_Funciones/Ejercicio9.html
@@ -7,7 +7,8 @@
     <script src="Ejercicio9.js"></script>
 </head>
 <body>
-
+    Introduce un numero natural.
+    <br>
     <input type="number" id="factorial">
     <br>
     <button onclick="calcFactorial()" id="Si">Calcular factorial</button>
