--- a/Array/Array_1-4.html
+++ b/Array/Array_1-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Array.js"></script>
+    <script src="Array_1-4.js"></script>
 </head>
 <body>
     <p>Introduce el numero del <span id="num">1</span>º del array o el numero que quieras buscar</p>
