--- a/Array/Array_8-10.html
+++ b/Array/Array_8-10.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <button type="button" onclick="ej8()">Ejercicio 8</button>
+    <button type="button" onclick="ej9()">Ejercicio 9</button>
 </body>
 </html>
