--- a/Array/Array_11-13.html
+++ b/Array/Array_11-13.html
@@ -11,5 +11,6 @@
 <body>
     <button type="button" onclick="ej11()">Ejercicio 11</button>
     <button type="button" onclick="ej12()">Ejercicio 12</button>
+    <button type="button" onclick="ej13()">Ejercicio 13</button>
 </body>
 </html>
