--- a/Array/Avanzados_2/Array_18-21.html
+++ b/Array/Avanzados_2/Array_18-21.html
@@ -11,5 +11,6 @@
     <button type="button" onclick="ej19()">Ejercicio 19</button>
     <button type="button" onclick="ej20()">Ejercicio 20</button>
     <button type="button" onclick="ej21()">Ejercicio 21</button>
+    <button type="button" onclick="ej22()">Ejercicio 22</button>
 </body>
 </html>
