--- a/DOM/Ejercicios/ej1-5.html
+++ b/DOM/Ejercicios/ej1-5.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="ej1.js"></script>
+    <script src="ej1-5.js"></script>
+
 </head>
 <body>
     <h1>Ejercicio 1</h1>
@@ -50,5 +51,14 @@
     
     <button onclick="incrementar()">incrementar</button>
     <button onclick="decrecer()">decrecer</button>
+
+    <h1>Ejercicio 4</h1>
+
+    <img src="imagen/1.jpg" alt="" id="imagen">
+    <!-- <button onclick="siguiente()" id="siguiente" value="1">siguiente</button>
+    <button onclick="anterior()"  id="anterior" disabled value="0">anterior</button>
+    <br> -->
+    <button onclick="galeria(this)" id="siguiente" value="1">siguiente</button>
+    <button onclick="galeria(this)"  id="anterior" disabled value="0">anterior</button>
 </body>
 </html>
