--- a/DOM/Ejercicios/ej1-5.html
+++ b/DOM/Ejercicios/ej1-5.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="ej1-5.js"></script>
+    <style>
+        .uno{
+            color:red;
+            font-size: 2em;
+        }
+        .dos{
+            color: blue;
+            font-size: 3em;
+        }
+    </style>
 
 </head>
 <body>
@@ -60,5 +70,7 @@
     <br> -->
     <button onclick="galeria(this)" id="siguiente" value="1">siguiente</button>
     <button onclick="galeria(this)"  id="anterior" disabled value="0">anterior</button>
+
+    <p class="uno" onclick="cambiarClase(this)">Hola buenas tardes a todos</p>
 </body>
 </html>
