--- a/DOM_modificar/Ejercicios/Ej_2.html
+++ b/DOM_modificar/Ejercicios/Ej_2.html
@@ -22,10 +22,14 @@
     <div class="estilo1">
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore libero saepe, odio necessitatibus quas porro maxime voluptas fugit sit facere voluptatem aspernatur, eaque numquam facilis natus veniam quo unde fuga.</p>
     </div>
+    <div class="generar">
 
+    </div>
 
-    <button onclick="añadir(this)">Añadir</button>
-
+    <button onclick="añadir()" id="añadir">Añadir</button>
+    <button onclick="borrarViejo(this)" id="viejo">Borrar Viejo</button>
+    <button onclick="borrarNuevos(this)" id="nuevo" disabled>Borrar Nuevos</button>
+    <button onclick="sustituirViejo()" id="sustituir">Sustituir</button>
 
 </body>
 </html>
