--- a/Intervalos/Ejercicios/Ejercicio16/Ejercicio16.html
+++ b/Intervalos/Ejercicios/Ejercicio16/Ejercicio16.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 16</title>
+    <script src="Ejercicio16.js"></script>
     <style>
         div{
             width: 100px;
@@ -27,6 +28,10 @@
             background-color: blue;
             top: 390px;
         }
+        button{
+            position: absolute;
+            top: 500px;
+        }
     </style>
 </head>
 <body>
@@ -34,7 +39,7 @@
     <div id="a2"></div>
     <div id="a3"></div>
     <div id="a4"></div>
-
-    <button onclick="inciarCarrera()"></button>
+    
+    <button onclick="iniciarCarrera()">Iniciar carrera</button>
 </body>
 </html>
