--- a/DOM_modificar/Ejercicios/Ej_3.html
+++ b/DOM_modificar/Ejercicios/Ej_3.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="Ej_3.js"></script>
+    <style>
+        .tabla{
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
     <button onclick="añadirTabla()">Crear tabla</button>
