--- a/TratamientoDeDatos/Ejercicios/01/Ejercicio_01.html
+++ b/TratamientoDeDatos/Ejercicios/01/Ejercicio_01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Ejercicio-01.js"></script>
+    <script src="Ejercicio_01.js"></script>
 </head>
 <body>
     <form action="" name="form">
