--- a/DOM_modificar/Ejercicios/Ej_6.html
+++ b/DOM_modificar/Ejercicios/Ej_6.html
@@ -24,6 +24,6 @@
     <img src="Fotos/PHP.png" onclick="seleccionar(this)">
     <img src="Fotos/Python.png" onclick="seleccionar(this)">
 <br>
-    <button onclick="createSection()">Enviar resultado</button>
+    <button onclick="crearSeccion()">Enviar resultado</button>
 </body>
 </html>
